Fixing various links

--- a/src/.crate-docs.md
+++ b/src/.crate-docs.md
@@ -3,7 +3,7 @@
 [![crate version](https://img.shields.io/crates/v/pulldown-cmark-frontmatter.svg)](https://crates.io/crates/pulldown-cmark-frontmatter)
 [![Live Build Status](https://img.shields.io/github/actions/workflow/status/khonsulabs/pulldown-cmark-frontmatter/rust.yml?branch=main)](https://github.com/khonsulabs/pulldown-cmark-frontmatter/actions?query=workflow:Tests)
 [![HTML Coverage Report for `main` branch](https://khonsulabs.github.io/pulldown-cmark-frontmatter/coverage/badge.svg)](https://khonsulabs.github.io/pulldown-cmark-frontmatter/coverage/)
-[![Documentation](https://img.shields.io/badge/docs-main-informational)](https://khonsulabs.github.io/pulldown-cmark-frontmatter/main/pulldown-cmark-frontmatter)
+[![Documentation](https://img.shields.io/badge/docs-main-informational)](https://khonsulabs.github.io/pulldown-cmark-frontmatter/main/pulldown_cmark_frontmatter)
 
 *This crate was written by someone unaffiliated with the `pulldown-cmark`
 crate.*
@@ -62,7 +62,7 @@ assert_eq!(
 let code_block = frontmatter.code_block.expect("code block not detected");
 assert_eq!(code_block.language.as_deref(), Some("toml"));
 let attrs: ExampleAttributes = toml::from_str(&code_block.source).expect("invalid toml");
-assert_eq!(attrs.author, "https://fosstodon.org/ecton");
+assert_eq!(attrs.author, "https://fosstodon.org/@ecton");
 ```
 
 The repository includes the [rendered html output][frontmatter-html]
@@ -87,11 +87,11 @@ assert_eq!(
 let code_block = frontmatter.code_block.expect("code block not detected");
 assert_eq!(code_block.language.as_deref(), Some("toml"));
 let attrs: ExampleAttributes = toml::from_str(&code_block.source).expect("invalid toml");
-assert_eq!(attrs.author, "https://fosstodon.org/ecton");
+assert_eq!(attrs.author, "https://fosstodon.org/@ecton");
 ```
 
 [pulldown-cmark]: https://github.com/raphlinus/pulldown-cmark
-[html]: https://github.com/khonsulabs/pulldown-cmark-frontmatter/blob/main/examples/html.rs
-[frontmatter-html]: https://github.com/khonsulabs/pulldown-cmark-frontmatter/blob/main/frontmatter-example.html
-[frontmatter-md]: https://github.com/khonsulabs/pulldown-cmark-frontmatter/blob/main/frontmatter-example.md
-[extractor]: https://github.com/khonsulabs/pulldown-cmark-frontmatter/blob/main/examples/extractor.rs
+[html]: https://github.com/khonsulabs/pulldown_cmark_frontmatter/blob/main/examples/html.rs
+[frontmatter-html]: https://github.com/khonsulabs/pulldown_cmark_frontmatter/blob/main/frontmatter-example.html
+[frontmatter-md]: https://github.com/khonsulabs/pulldown_cmark_frontmatter/blob/main/frontmatter-example.md
+[extractor]: https://github.com/khonsulabs/pulldown_cmark_frontmatter/blob/main/examples/extractor.rs
